# Arugot

./: .gitignore  README.md  foo.txt  main.py  pyproject.toml  settings.py  start_scheduler.ps1
.github/: copilot-instructions.md
ArugotAutomation/: .gitignore  README.md  main.py  pyproject.toml  start_scheduler.ps1
ArugotAutomation/common/: inbox.py  types.py
ArugotAutomation/docs/: extract-project-attribution.md  inbox-architecture-proposal.md  manual-meeting-notes.md  placeholder.md
ArugotAutomation/mcp_server/: README.md  __init__.py  server.py
ArugotAutomation/runner/: runner.py  state.py
ArugotAutomation/scheduler/: scheduler.py
ArugotFrontend/: index.html  package-lock.json  package.json  vite.config.ts
ArugotFrontend/src/: App.vue
common/: github_client.py  inbox.py  llm.py  logging.py  types.py
docs/: manual-meeting-notes.md  meeting-extractor-plan.md  scheduler-plan.md  synth-project-recap.md  workflow-design-principles.md
runner/: runner.py
scheduler/: scheduler.py
workflows/: example.py
workflows/core_agents/: core_agents.md
workflows/example/: example.md
workflows/extract_github_pr/: __init__.py  extract_github_pr.md  workflow.py  writer.py
workflows/extract_meetings/: __init__.py  workflow.py
workflows/fireflies/: writer.py
workflows/fireflies_ingest/: __init__.py  client.py  workflow.py  writer.py
workflows/github_ingest/: __init__.py  workflow.py  writer.py
workflows/github_pr/: __init__.py  writer.py
workflows/ingest_fireflies/: __init__.py  workflow.py  writer.py
workflows/ingest_github_pr/: __init__.py  (+1 more)
(+46 files in other folders)
