[project]
name = "productivity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "croniter>=6.0.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "tzdata>=2025.3",
]
